<resources>
    <string name="app_name">My Application</string>
    <string name="login_comment_info">인가된 Device만 사용가능 합니다.</string>
    <string name="login_comment_loading">접속 가능 여부를 체크합니다.</string>
    <string name="btn_num">숫자 입력값 복호화</string>
    <string name="btn_char">문자 입력값 복호화</string>
    <string name="btn_server">서버로부터 입력값 복호화</string>
    <string name="result_value">결과값</string>
    <string name="notice_last_time">최근 공지</string>
    <string name="event_last_time">최근 이벤트</string>
    <string name="login_check_api">App-MDNSearchForOpr</string>
    <string name="result_code">RESULT_CODE</string>
    <string name="mdn">MDN</string>
    <string name="result_value_zero">0</string>
    <string name="svc_mgmt_num">SVC_MGMT_NUM</string>
    <string name="device_type">DEVICE_TYPE</string>
    <string name="device_id">DEVICE_ID</string>
    <string name="app_version">APP_VERSION</string>
    <string name="name">NAME</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="sex_cd">SEX_CD</string>
    <string name="service_type">SERVICE_TYPE</string>
    <string name="essential_yn">ESSENTIAL_YN</string>
    <string name="agree_yn">AGREE_YN</string>


</resources>

