<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
    <LinearLayout
    	android:layout_width="fill_parent" android:layout_height="wrap_content"
     	android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="native code sample" android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        />
    

    <EditText android:id="@+id/charEditText"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:onClick="onClick" android:focusable="true" android:hint="문자 패스워드 입력"
        />
    
    <EditText android:id="@+id/numEditText"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:onClick="onClick" android:focusable="false" android:hint="숫자 패스워드 입력"
        />
    
    <EditText android:id="@+id/serialNumEditText"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:onClick="onClick" android:focusable="false" android:hint="숫자 패스워드 입력"
        android:visibility="gone"
        />
    
    </LinearLayout>

		<Button
		    android:id="@+id/num_conf"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="10dp"
		    android:text="@string/btn_num" />

		<Button
		    android:id="@+id/char_conf"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignRight="@id/num_conf"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="10dp"
		    android:text="@string/btn_char" />

		<Button
		    android:id="@+id/server_conf"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentRight="true"
		    android:layout_below="@+id/num_conf"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="30dp"
		    android:text="@string/btn_server"
		    android:visibility="visible" />

	    <!-- view 방식을 경우 문자와 숫자 레이아웃을 include 해야함  -->
	    <include android:id="@+id/nf_char_view" layout="@layout/nfilter_char_key_view"
	        android:layout_width="fill_parent"	android:layout_height="fill_parent"
	        />
		<include android:id="@+id/nf_num_view" layout="@layout/nfilter_num_key_view"
	        android:layout_width="fill_parent"	android:layout_height="fill_parent"
	        />
		<include android:id="@+id/nf_num_serial_view" layout="@layout/nfilter_num_serial_key_view"
	        android:layout_width="fill_parent"	android:layout_height="fill_parent"
	        />
</RelativeLayout>
