<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_area_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--공통영역-->
    <ScrollView
        android:id="@+id/main_area_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--공통영역-->
        <LinearLayout
            android:id="@+id/main_area_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Customizing 영역 시작 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/event_last_time" />

                <DatePicker
                    android:id="@+id/event_last_time_datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-30dp"
                    android:layout_marginTop="-30dp"
                    android:layout_weight="1"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:scaleX="0.7"
                    android:scaleY="0.7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/notice_last_time" />

                <DatePicker
                    android:id="@+id/notice_last_time_datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-30dp"
                    android:layout_marginTop="-30dp"
                    android:layout_weight="1"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:scaleX="0.7"
                    android:scaleY="0.7" />

            </LinearLayout>
            <!-- Customizing 영역 끝 -->

            <!--공통영역-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/grey"
                android:gravity="center_horizontal"
                android:text="@string/result_value"
                android:textAlignment="center"
                android:textSize="20dp" />

            <!--공통영역-->
            <TableLayout
                android:id="@+id/main_area_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
